<?xml version="1.0"?>
<package>
  <name>gmock_catkin</name>
  <version>1.7.0</version> 
  <description>gmock_catkin</description>
  <maintainer email="pascal.gohl@mavt.ethz.ch">Pascal Gohl</maintainer>
  <author>Pascal Gohl</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
